rough initial page geolocation

--- a/www/templates/around.html
+++ b/www/templates/around.html
@@ -13,8 +13,8 @@
                             'page': 'around',
                             'area': '',
                             'all_pins': '',
-                            'latitude': localStorage.latitude,
-                            'longitude': localStorage.longitude,
+                            'latitude': 0,
+                            'longitude': 0,
 
                             'zoom': 4,
                             'numZoomLevels': 5,
@@ -24,9 +24,6 @@
 
                         };
 
-                        $('#fixmystreet\\.latitude').val( localStorage.latitude );
-                        $('#fixmystreet\\.longitude').val( localStorage.longitude );
-                        $('#pc').val( localStorage.pc );
                     </script>
 
                     <div id="map_box">
