--- a/www/templates/details.html
+++ b/www/templates/details.html
@@ -11,10 +11,12 @@
                                 <label for="form_detail">Details</label>
                                 <textarea rows="7" cols="26" name="detail" id="form_detail" placeholder="Please fill in details of the problem." required><%= details %></textarea>
 
+                                <% if ( categories ) { print( categories ) } else { %>
                                 <div id="form_category_row">
                                     <label class="inline" for="form_category">Category</label>
                                     <select name="category" id="form_category" required><option>Loading...</option></select>
                                 </div>
+                                <% } %>
                             </div>
                         </fieldset>
                     </div>
