--- a/www/templates/around.html
+++ b/www/templates/around.html
@@ -26,14 +26,11 @@
                     <div id="map_box">
                         <div id="map"></div>
                             <div id="search">
-                                <input name="pc" id="pc"><input type="button" value="s" id="btn-search">
+                                <input name="pc" id="pc"><input type="button" value="" id="btn-search">
                             </div>
-                            <a id="mark-here" class="nodisplay">Mark this point</a>
-                            <p id="sub_map_links">
-                                <a id="hide_pins_link" rel="nofollow" href="">Hide pins</a>
-                                <a id="all_pins_link" rel="nofollow" href="">Show old</a>
-                                <a id="saved_reports" rel="nofollow" href="my_reports.html">Saved reports</a>
-                            </p>
+                            <a id="mark-here" class="nodisplay">Create Report</a>
+                            <a id="saved-reports" class="nodisplay">View Drafts</a>
+                            <a id="use-location" class="nodisplay">Use this Location</a>
                     </div>
                     </form>
                 </div>
