--- a/www/templates/around.html
+++ b/www/templates/around.html
@@ -34,3 +34,10 @@
                     </div>
                     </form>
                 </div>
+            <nav class="bar-tab nodisplay">
+                <ol class="ext-progress">
+                    <li class="step step-current">1</li>
+                    <li class="step step">2</li>
+                    <li class="step step">3</li>
+                </ol>
+            </nav>
