--- a/www/templates/details.html
+++ b/www/templates/details.html
@@ -21,3 +21,10 @@
                         </fieldset>
                     </div>
                 </div>
+            <nav class="bar-tab">
+                <ol class="ext-progress">
+                    <li class="step step-complete">1</li>
+                    <li class="step step-complete">2</li>
+                    <li class="step step-current">3</li>
+                </ol>
+            </nav>
