--- a/www/templates/submit.html
+++ b/www/templates/submit.html
@@ -49,3 +49,10 @@
                     </div>
                     </form>
                 </div>
+            <nav class="bar-tab">
+                <ol class="ext-progress">
+                    <li class="step step-complete">1</li>
+                    <li class="step step-complete">2</li>
+                    <li class="step step-current">3</li>
+                </ol>
+            </nav>
