style photo add page correctly

--- a/www/templates/photo.html
+++ b/www/templates/photo.html
@@ -7,16 +7,15 @@
                     <div id="side-form">
                         <fieldset>
                             <div id="problem_form">
-                                <div id="add_photo">
-                                    <label>Optionally Add a Photo</label>
-                                    <input value="Take Photo" type="button" name="photo_button" id="id_photo_button" class="green-btn"> Or 
-                                    <input value="Choose" type="button" name="existing" id="id_existing" class="green-btn">
-                                </div>
-
-                                <div id="display_photo" style="display: none">
-                                    <label>Your Photo</label>
-                                    <img id="photo" src="" width="200" />
-                                    <input value="Remove Photo" type="button" name="del_photo_button" id="id_del_photo_button" class="green-btn">
+                                <div class="ext-form-content">
+                                  <div>
+                                      <a class="button-blue" href="report-details.html" data-prefetch data-transition="slide" data-role="button">Add Photo</a>
+                                  </div>
+                                  <img class="ext-photo-preview" src="img/placeholder-photo.png" alt="">
+                                  <!-- Replace src with preview of selected photo -->
+                                  <div>
+                                      <a class="button-grey" href="report-details.html" data-theme="b" data-prefetch data-transition="slide" data-role="button">Continue without photo</a>
+                                  </div>
                                 </div>
 
                                 <input type="hidden" name="photo" id="form_photo" value="">
