--- a/www/css/mobile.css
+++ b/www/css/mobile.css
@@ -236,3 +236,33 @@
       overflow: hidden;
       background: #2a2a2a url("../img/complete.svg") no-repeat scroll center center;
       background-size: 80% auto; }
+
+.ext-form-content {
+  display: block;
+  background-color: white;
+  padding: 0.5em;
+  margin: 3em 0.5em 0.5em 0.5em;
+  -webkit-border-radius: 0.25em;
+  border-radius: 0.5em; }
+  .ext-form-content form > div {
+    border-bottom: 1px solid #ccc;
+    padding: 0.5em 0; }
+  .ext-form-content h2, .ext-form-content h3 {
+    padding: 0 0.25em;
+    color: #315db7;
+    text-shadow: none;
+    font-weight: normal;
+    font-size: 1.75em;
+    line-height: 1.3;
+    text-align: left; }
+  .ext-form-content h2 {
+    margin-top: 1em; }
+  .ext-form-content h3 {
+    color: #555; }
+  .ext-form-content p {
+    color: #555;
+    padding: 0 0.5em;
+    text-shadow: none;
+    margin: 2em 0;
+    text-align: left; }
+
