--- a/www/templates/around.html
+++ b/www/templates/around.html
@@ -1,6 +1,5 @@
             <header class="bar-title">
-                <h1 class="title">Select Location</h1>
-                <div class="button-next">Next</div>
+                <a class="button-menu"><img src="img/menu.png"></a>
             </header>
                 <div class="content" role="main">
                     <form action="" method="post" name="mapForm" id="mapForm" enctype="multipart/form-data" class="validate">
