use generic classes for styling most of front page buttons

--- a/www/templates/around.html
+++ b/www/templates/around.html
@@ -27,9 +27,9 @@
                             <div id="search">
                                 <input name="pc" id="pc"><input type="button" value="" id="btn-search">
                             </div>
-                            <a id="mark-here" class="nodisplay">Create Report</a>
-                            <a id="saved-reports" class="nodisplay">View Drafts</a>
-                            <a id="use-location" class="nodisplay">Use this Location</a>
+                            <a id="mark-here" class="nodisplay button-blue">Create Report</a>
+                            <a id="saved-reports" class="nodisplay button-grey"> View Drafts</a>
+                            <a id="use-location" class="nodisplay button-blue">Use this Location</a>
                     </div>
                     </form>
                 </div>
