--- a/www/css/mobile.css
+++ b/www/css/mobile.css
@@ -246,3 +246,10 @@
     margin: 2em 0;
     text-align: left; }
 
+.ext-photo-preview {
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+  margin: auto;
+  max-height: 60%;
+  max-width: 100%; }
+
