add in working callbacks for photo submission

--- a/www/templates/submit.html
+++ b/www/templates/submit.html
@@ -27,7 +27,7 @@
                                     <input type="email" value="" name="email" id="form_email" placeholder="Please enter your email address" required>
 
                                                 <div class="form-txt-submit-box form-focus-hidden">
-                                                    <input class="green-btn button-submit" type="button" id="submit_register" name="submit_register" value="Report">
+                                                    <input class="button-blue" type="button" id="send_report" name="send_report" value="Report">
                                                 </div>
 
                                             </div>
