add styling to done button

--- a/www/templates/sent.html
+++ b/www/templates/sent.html
@@ -6,6 +6,6 @@
               <h3>Thank you, your report has been submitted</h3>
               <p>You have been sent a confirmation email to <%= email %></p>
               <div>
-                  <a href="index.html" id="button-done">Done</a>
+                  <a class="button-blue" href="index.html" id="button-done">Done</a>
               </div>
         </div>
