allow changing of user details from report details page

--- a/www/templates/details.html
+++ b/www/templates/details.html
@@ -21,7 +21,7 @@
 
                                     <div>
                                         <label for="user-details" class="select">Personal Details:</label>
-                                        <a data-role="button" name="user-details">Signed in as <%= user.email %><em class="edit_details-info">(click to edit)</em></a>
+                                        <a id="user-details" name="user-details">Signed in as <%= user.email %><em class="edit_details-info">(click to edit)</em></a>
                                     </div>
 
                                     <div class="form-txt-submit-box">
