--- a/www/css/mobile.css
+++ b/www/css/mobile.css
@@ -13,49 +13,6 @@
 }
 
 
-.mobile-info a {
-  cursor: pointer;
-  font-size: 0.875em;
-  font-family: Helmet, Freesans, sans-serif;
-  font-weight: bold;
-  line-height: 1.375em;
-  padding: 0.7em 0.5em 0.5em 0.5em;
-  margin: 0;
-  width: auto;
-  height: auto;
-  -moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
-  -o-border-radius: 4px;
-  -ms-border-radius: 4px;
-  -khtml-border-radius: 4px;
-  border-radius: 4px;
-  background: #333333;
-  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #333333), color-stop(100%, #1a1a1a));
-  background: -webkit-linear-gradient(#333333, #1a1a1a);
-  background: -moz-linear-gradient(#333333, #1a1a1a);
-  background: -o-linear-gradient(#333333, #1a1a1a);
-  background: -ms-linear-gradient(#333333, #1a1a1a);
-  background: linear-gradient(#333333, #1a1a1a);
-  border: 1px solid #1a1a1a;
-  color: white;
-  font-weight: normal;
-  font-size: 0.875em;
-  line-height: 1;
-  padding: 0.5em 0.75em;
-  position: absolute;
-  right: 0.3em;
-  bottom: 0.3em;
-}
-
-.mobile-header {
-    margin-top: 35px;
-}
-
-.mobile-header #site-logo {
-    margin-top: 35px;
-}
-
-
 .button-grey,
 .button-blue {
     font-size: 1.2em;
@@ -184,12 +141,18 @@
     background: none;
 }
 
+.button-prev, .button-next {
+    z-index: 1;
+}
+
 .ext-progress {
-  display: block;
-  text-align: center;
-  margin: 0.5em 25%;
-  background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAgAAAAICAMAAADz0U65AAAABlBMVEUaGhoAAAAS3qDqAAAADElEQVQIHWNgoA4AAABIAAG8nVfVAAAAAElFTkSuQmCC) repeat-x scroll center center; }
-  .ext-progress .step {
+    display: block;
+    text-align: center;
+    margin: 0.5em 25%;
+    background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAgAAAAICAMAAADz0U65AAAABlBMVEUaGhoAAAAS3qDqAAAADElEQVQIHWNgoA4AAABIAAG8nVfVAAAAAElFTkSuQmCC) repeat-x scroll center center;
+}
+
+.ext-progress .step {
     display: inline-block;
     width: 1.5em;
     height: 1.5em;
@@ -202,54 +165,74 @@
     border: 2px solid darkgrey;
     box-sizing: border-box;
     -webkit-box-shadow: 0px 1px 4px 2px rgba(0, 0, 0, 0.2);
-    box-shadow: 0px 1px 4px 2px rgba(0, 0, 0, 0.2); }
-    .ext-progress .step:last-child {
-      float: right; }
-    .ext-progress .step:first-child {
-      float: left; }
-    .ext-progress .step.step-current {
-      background-color: #315db7;
-      color: white;
-      border-color: #315db7; }
-    .ext-progress .step.step-complete {
-      text-indent: -999px;
-      overflow: hidden;
-      background: #2a2a2a url("../img/complete.svg") no-repeat scroll center center;
-      background-size: 80% auto; }
+    box-shadow: 0px 1px 4px 2px rgba(0, 0, 0, 0.2);
+}
+
+.ext-progress .step:last-child {
+    float: right;
+}
+
+.ext-progress .step:first-child {
+    float: left;
+}
+
+.ext-progress .step.step-current {
+    background-color: #315db7;
+    color: white;
+    border-color: #315db7;
+}
+
+.ext-progress .step.step-complete {
+    text-indent: -999px;
+    overflow: hidden;
+    background: #2a2a2a url("../img/complete.svg") no-repeat scroll center center;
+    background-size: 80% auto;
+}
 
 .ext-form-content {
-  display: block;
-  background-color: white;
-  padding: 0.5em;
-  margin: 0.5em 0.5em 0.5em 0.5em;
-  -webkit-border-radius: 0.25em;
-  border-radius: 0.5em; }
-  .ext-form-content form > div {
+    display: block;
+    background-color: white;
+    padding: 0.5em;
+    margin: 0.5em 0.5em 0.5em 0.5em;
+    -webkit-border-radius: 0.25em;
+    border-radius: 0.5em;
+}
+
+.ext-form-content form > div {
     border-bottom: 1px solid #ccc;
-    padding: 0.5em 0; }
-  .ext-form-content h2, .ext-form-content h3 {
+    padding: 0.5em 0;
+}
+
+.ext-form-content h2, .ext-form-content h3 {
     padding: 0 0.25em;
     color: #315db7;
     text-shadow: none;
     font-weight: normal;
     font-size: 1.75em;
     line-height: 1.3;
-    text-align: left; }
-  .ext-form-content h2 {
-    margin-top: 1em; }
-  .ext-form-content h3 {
-    color: #555; }
-  .ext-form-content p {
+    text-align: left;
+}
+
+.ext-form-content h2 {
+    margin-top: 1em;
+}
+
+.ext-form-content h3 {
+    color: #555;
+}
+
+.ext-form-content p {
     color: #555;
     padding: 0 0.5em;
     text-shadow: none;
     margin: 2em 0;
-    text-align: left; }
+    text-align: left;
+}
 
 .ext-photo-preview {
     padding-top: 0.5em;
     padding-bottom: 0.5em;
-  margin: auto;
-  max-height: 60%;
-  max-width: 100%; }
-
+    margin: auto;
+    max-height: 60%;
+    max-width: 100%;
+}
