--- a/www/templates/around.html
+++ b/www/templates/around.html
@@ -30,6 +30,12 @@
                             <a id="mark-here" class="nodisplay button-blue">Create Report</a>
                             <a id="saved-reports" class="nodisplay button-grey"> View Drafts</a>
                             <a id="use-location" class="nodisplay button-blue">Use this Location</a>
+                            <div class="nodisplay" id="error">
+                                <div id="msg"></div>
+                                <div>
+                                    <a class="button-blue" id="closeError">OK</a>
+                                </div>
+                            </div>
                     </div>
                     </form>
                 </div>
