--- a/www/templates/around.html
+++ b/www/templates/around.html
@@ -25,11 +25,12 @@
                     <div id="map_box">
                         <div id="map"></div>
                             <div id="search">
-                                <input name="pc" id="pc"><input type="button" value="" id="btn-search">
+                                <input name="pc" id="pc" placeholder="Search for streetname"><input type="button" value="" id="btn-search">
                             </div>
                             <a id="mark-here" class="nodisplay button-blue">Create Report</a>
                             <a id="saved-reports" class="nodisplay button-grey"> View Drafts</a>
                             <a id="use-location" class="nodisplay button-blue">Use this Location</a>
+                            <a id="select-another" class="nodisplay button-grey">Select another</a>
                             <div class="nodisplay" id="error">
                                 <div id="msg"></div>
                                 <div>
