initial translation pass, some guessing

--- a/www/templates/sent.html
+++ b/www/templates/sent.html
@@ -1,11 +1,15 @@
         <header class="bar-title">
-            <h1 class="title">Report Sent</h1>
+            <h1 class="title">Gesendet Meldung</h1>
         </header>
         <div class="content" role="main">
-            <h2>Success</h2>
-              <h3>Thank you, your report has been submitted</h3>
-              <p>You have been sent a confirmation email to <%= email %></p>
-              <div>
-                  <a class="button-blue" href="index.html" id="button-done">Done</a>
-              </div>
+            <div class="ext-form-content">
+                <h3>Fast Fertig! Bitte checken Sie ihre Mailbox...</h3>
+
+                <p>
+                Falls Sie kein E-Mail erhalten, überprüfend Sie bitte Ihren Spam-Ordner.
+                </p>
+                <div>
+                  <a class="button-blue" href="index.html" id="button-done">Erledigt</a>
+                </div>
+            </div>
         </div>
