--- a/www/templates/user.html
+++ b/www/templates/user.html
@@ -1,5 +1,5 @@
             <header class="bar-title">
-                <h1 class="title">User Details</h1>
+                <h1 class="title">Persönlichen angaben</h1>
             </header>
                 <div class="content" role="main">
                     <div id="side-form">
@@ -7,15 +7,15 @@
                             <div id="problem_form">
                                 <div class="ext-form-content">
                                     <div>
-                                        <label for="form-email">Your email:</label>
+                                        <label for="form-email">E-Mail Adresse:</label>
                                         <input type="email" email="form-email" id="form-email" value="<%= email %>">
                                     </div>
                                     <div>
-                                        <label for="form-name">Your Name (optional):</label>
+                                        <label for="form-name">Name (optional):</label>
                                         <input type="text" name="form-name" id="form-name" value="<%= name %>">
                                     </div>
                                     <div>
-                                        <label for="form-phone">Your Phone (optional):</label>
+                                        <label for="form-phone">Telefonnummer (optional):</label>
                                         <input type="text" phone="form-phone" id="form-phone" value="<%= phone %>">
                                     </div>
 
