--- a/www/templates/around.html
+++ b/www/templates/around.html
@@ -26,9 +26,9 @@
                     <div id="map_box">
                         <div id="map"></div>
                             <div id="search">
-                                <input name="pc" id="pc" placeholder="Search for streetname"><input type="button" value="" id="btn-search">
+                                <input name="pc" id="pc" placeholder="Ungefähre Adresse des Mangels"><input type="button" value="" id="btn-search">
                             </div>
-                            <a id="mark-here" class="nodisplay button-blue">Create Report</a>
+                            <a id="mark-here" class="nodisplay button-blue">Eine Meldung erfassen</a>
                             <a id="saved-reports" class="nodisplay button-grey"> View Drafts</a>
                             <a id="use-location" class="nodisplay button-blue">Use this Location</a>
                             <a id="select-another" class="nodisplay button-grey">Select another</a>
