--- a/www/templates/details.html
+++ b/www/templates/details.html
@@ -9,23 +9,23 @@
                             <div id="problem_form">
                                 <div class="ext-form-content">
 
-                                    <label for="form_detail">Details</label>
-                                    <textarea rows="7" cols="26" name="detail" id="form_detail" placeholder="Please fill in details of the problem." required><%= report.details %></textarea>
+                                    <label for="form_detail">Beschreibung</label>
+                                    <textarea rows="7" cols="26" name="detail" id="form_detail" placeholder="Beschreiben Sie den Mangel." required><%= report.details %></textarea>
 
                                     <% if ( report.categories ) { print( report.categories ) } else { %>
                                     <div id="form_category_row">
-                                        <label class="inline" for="form_category">Category</label>
+                                        <label class="inline" for="form_category">Kategorie</label>
                                         <select name="category" id="form_category" required><option>Loading...</option></select>
                                     </div>
                                     <% } %>
 
                                     <div>
-                                        <label for="user-details" class="select">Personal Details:</label>
+                                        <label for="user-details" class="select">Persönlichen angaben:</label>
                                         <a id="user-details" name="user-details">Signed in as <%= user.email %><em class="edit_details-info">(click to edit)</em></a>
                                     </div>
 
                                     <div class="form-txt-submit-box">
-                                        <input class="button-blue" type="button" id="send_report" name="send_report" value="Report">
+                                        <input class="button-blue" type="button" id="send_report" name="send_report" value="Abschicken">
                                     </div>
                                 </div>
                             </div>
