draft reports not implemented yet so do not show button

--- a/www/templates/around.html
+++ b/www/templates/around.html
@@ -29,7 +29,7 @@
                                 <input name="pc" id="pc" placeholder="Ungefähre Adresse des Mangels"><input type="button" value="" id="btn-search">
                             </div>
                             <a id="mark-here" class="nodisplay button-blue">Eine Meldung erfassen</a>
-                            <a id="saved-reports" class="nodisplay button-grey"> View Drafts</a>
+                            <!-- a id="saved-reports" class="nodisplay button-grey">View Drafts</a -->
                             <a id="use-location" class="nodisplay button-blue">Use this Location</a>
                             <a id="select-another" class="nodisplay button-grey">Select another</a>
                             <div class="nodisplay" id="error">
