--- a/www/css/mobile.css
+++ b/www/css/mobile.css
@@ -31,6 +31,12 @@
     margin: 0.4em;
 }
 
+#error .button-grey,
+#error .button-blue {
+    margin: 0;
+    margin-top: 0.4em;
+}
+
 .button-grey a,
 .button-blue a {
     text-decoration: none;
