--- a/www/templates/around.html
+++ b/www/templates/around.html
@@ -1,5 +1,5 @@
-            <header class="bar-title">
-                <h1 class="title">FixMyZ&uuml;rich</h1>
+            <header class="bar-title" id="home-header">
+                <!--<h1 class="title">FixMyZ&uuml;rich</h1>-->
                 <!-- a class="button-menu"><img src="img/menu.png"></a -->
             </header>
                 <div class="content" role="main">
