--- a/www/templates/details.html
+++ b/www/templates/details.html
@@ -8,9 +8,6 @@
                             <div id="problem_form">
                                 <div class="ext-form-content">
 
-                                    <label for="form_detail">Beschreibung</label>
-                                    <textarea rows="7" cols="26" name="detail" id="form_detail" placeholder="Beschreiben Sie den Mangel." required><%= report.details %></textarea>
-
                                     <% if ( report.categories ) { print( report.categories ) } else { %>
                                     <div id="form_category_row">
                                         <label class="inline" for="form_category">Kategorie</label>
@@ -18,9 +15,12 @@
                                     </div>
                                     <% } %>
 
+                                    <label for="form_detail">Beschreibung</label>
+                                    <textarea name="detail" id="form_detail" placeholder="Beschreiben Sie den Mangel." required><%= report.details %></textarea>
+
                                     <div>
-                                        <label for="user-details" class="select">Persönlichen angaben:</label>
-                                        <a id="user-details" name="user-details">Signed in as <%= user.email %><em class="edit_details-info">(click to edit)</em></a>
+                                        <label for="user-details" class="select">Persönlichen angaben</label>
+                                        <a id="user-details" name="user-details">Signed in as <% if ( user.name ) { %><%= user.name %><% } else { %><%= user.email %><% } %> <em class="edit_details-info">(click to edit)</em></a>
                                     </div>
 
                                     <div class="form-txt-submit-box">
