--- a/www/css/mobile.css
+++ b/www/css/mobile.css
@@ -79,21 +79,21 @@ a:visited:active.button-blue {
 
 #error {
     font-size: 1.2em;
-    -moz-border-radius: 0.25em;
-    -webkit-border-radius: 0.25em;
-    -o-border-radius: 0.25em;
-    -ms-border-radius: 0.25em;
-    -khtml-border-radius: 0.25em;
-    border-radius: 0.25em;
+    -moz-border-radius: 0.5em;
+    -webkit-border-radius: 0.5em;
+    -o-border-radius: 0.5em;
+    -ms-border-radius: 0.5em;
+    -khtml-border-radius: 0.5em;
+    border-radius: 0.5em;
     margin-top: 0.5em;
 
     position: absolute;
-    top: 100px;
+    top: 120px;
 
     text-align: center;
     width: 70%;
     z-index: 2000;
-    padding: 0.2em;
+    padding: 0.5em;
     margin: 0em 15% 0em 15%;
 
     background: #a9a9a9;
@@ -338,7 +338,7 @@ a:visited:active.button-blue {
     max-width: 100%;
 }
 
-#ajaxOverlay {
+#ajaxOverlay, #errorOverlay {
     position: absolute;
     top: 0;
     left: 0;
