--- a/www/templates/welcome.html
+++ b/www/templates/welcome.html
@@ -1,7 +1,15 @@
             <header class="bar-title">
                 <h1 class="title">Welcome to</h1>
             </header>
-                <div class="content" role="main">
+                <div class="content" role="main" id="first-page">
+                    <div id="welcome">
+                        <h1>FixMyZ&uuml;rich</h1>
+
+                        <p>
+                            Fill out your details to get started reporting problems
+                        </p>
+                    </div>
+
                     <div id="side-form">
                         <fieldset>
                             <div id="problem_form">
