display localised date and state information for problems

--- a/www/templates/report.html
+++ b/www/templates/report.html
@@ -30,14 +30,14 @@
 
                     <% if ( is_fixed == 1 ) { %>
                     <div class="banner">
-                        <p id="fixed"><%= state %></p>
+                        <p id="fixed"><%= state_t %></p>
                     </div>
                     <% } %>
 
                     <div class="problem-header cf">
                         <h1>i<%= title %></h1>
                         <p class="sub">
-                            <%= meta %>
+                            <%= created_pp %>
                         </p>
 
                         <% if ( photo ) { %>
