remove next button and Prev -> Back on photo screen

--- a/www/templates/photo.html
+++ b/www/templates/photo.html
@@ -1,7 +1,6 @@
             <header class="bar-title">
-                <div class="button-prev">Prev</div>
+                <div class="button-prev">Back</div>
                 <h1 class="title">Add a Photo</h1>
-                <div class="button-next">Next</div>
             </header>
                 <div class="content" role="main">
                     <div id="side-form">
