add back button to user details screen and change title to prevent overlapping

--- a/www/templates/user.html
+++ b/www/templates/user.html
@@ -1,5 +1,6 @@
             <header class="bar-title">
-                <h1 class="title">Persönlichen angaben</h1>
+                <div class="button-prev">Back</div>
+                <h1 class="title">User details</h1>
             </header>
                 <div class="content" role="main">
                     <div id="side-form">
