--- a/www/templates/user.html
+++ b/www/templates/user.html
@@ -8,15 +8,15 @@
                             <div id="problem_form">
                                 <div class="ext-form-content">
                                     <div>
-                                        <label for="form-email">E-Mail Adresse:</label>
+                                        <label for="form-email">E-Mail Adresse</label>
                                         <input type="email" email="form-email" id="form-email" value="<%= email %>">
                                     </div>
                                     <div>
-                                        <label for="form-name">Name (optional):</label>
+                                        <label for="form-name">Name (optional)</label>
                                         <input type="text" name="form-name" id="form-name" value="<%= name %>">
                                     </div>
                                     <div>
-                                        <label for="form-phone">Telefonnummer (optional):</label>
+                                        <label for="form-phone">Telefonnummer (optional)</label>
                                         <input type="text" phone="form-phone" id="form-phone" value="<%= phone %>">
                                     </div>
 
