use buttons instead of links

--- a/www/templates/welcome.html
+++ b/www/templates/welcome.html
@@ -28,7 +28,7 @@
                                     </div>
 
                                   <div>
-                                      <a class="button-blue" id="save">Save Details</a>
+                                      <input type="button" class="button-blue" id="save" value="Save Details">
                                   </div>
                                 </div>
 
