--- a/www/templates/report.html
+++ b/www/templates/report.html
@@ -35,7 +35,7 @@
                     <% } %>
 
                     <div class="problem-header cf">
-                        <h1>i<%= title %></h1>
+                        <h1><%= title %></h1>
                         <p class="sub">
                             <%= created_pp %>
                         </p>
