--- a/www/css/mobile.css
+++ b/www/css/mobile.css
@@ -402,3 +402,9 @@ a:visited:active.button-blue {
     margin: 60% auto 0 auto;
     display: block;
 }
+
+.button-gradient:after,
+.button-gradient:before {
+  -webkit-mask-image: -webkit-gradient(linear, left top, right bottom, from(#000), color-stop(.33, #000), color-stop(.5, transparent), to(transparent));
+                  mask-image: gradient(linear, left top, right bottom, from(#000), color-stop(.33, #000), color-stop(.5, transparent), to(transparent));
+}
