--- a/www/templates/around.html
+++ b/www/templates/around.html
@@ -1,6 +1,6 @@
             <header class="bar-title" id="home-header">
                 <!--<h1 class="title">FixMyZ&uuml;rich</h1>-->
-                <!-- a class="button-menu"><img src="img/menu.png"></a -->
+                <a class="button-menu"><img src="img/menu.png"></a>
             </header>
                 <div class="content" role="main">
                     <form action="" method="post" name="mapForm" id="mapForm" enctype="multipart/form-data" class="validate">
