set phone number input box to be type tel so get sensible keyboard

--- a/www/templates/welcome.html
+++ b/www/templates/welcome.html
@@ -24,7 +24,7 @@
                                     </div>
                                     <div>
                                         <label for="form-phone">Telefonnummer (optional)</label>
-                                        <input type="text" phone="form-phone" id="form-phone">
+                                        <input type="tel" phone="form-phone" id="form-phone">
                                     </div>
 
                                   <div>
