--- a/www/templates/user.html
+++ b/www/templates/user.html
@@ -17,7 +17,7 @@
                                     </div>
                                     <div>
                                         <label for="form-phone">Telefonnummer (optional)</label>
-                                        <input type="text" phone="form-phone" id="form-phone" value="<%= phone %>">
+                                        <input type="tel" phone="form-phone" id="form-phone" value="<%= phone %>">
                                     </div>
 
                                   <div>
