turn off browser autocomplete and autocorrect for place search as it is a hindrance

--- a/www/templates/around.html
+++ b/www/templates/around.html
@@ -26,7 +26,7 @@
                     <div id="map_box">
                         <div id="map"></div>
                             <div id="search">
-                                <input name="pc" id="pc" placeholder="Ungefähre Adresse des Mangels"><input type="button" value="" id="btn-search">
+                                <input name="pc" id="pc" autocorrect="off" autocomplete="off" placeholder="Ungefähre Adresse des Mangels"><input type="button" value="" id="btn-search">
                             </div>
                             <a id="mark-here" class="nodisplay button-blue">Eine Meldung erfassen</a>
                             <!-- a id="saved-reports" class="nodisplay button-grey">View Drafts</a -->
